--- a/index.html
+++ b/index.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página en Construcción - Defensa Laboral</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Página en Construcción - Defensa Laboral</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header class="header">
-            <img src="img/Logo.jpeg" alt="Logo Defensa Laboral" class="logo">
-            <h1 class="title">Página en Construcción</h1>
-            <p class="subtitle">Gracias por visitarnos. Nuestra página está siendo actualizada.</p>
-        </header>
-    </div>
+  <div class="container">
+    <header class="header">
+      <img src="img/construccion-denfensa-legal-color.svg" alt="Logo Defensa Laboral" class="logo">
+      <h1 class="title">Página en Construcción</h1>
+      <p class="subtitle">Gracias por visitarnos. Nuestra página está siendo actualizada.</p>
+    </header>
+  </div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p>
+  </footer>
+
+  <!-- Script para insertar el año actual -->
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
