se agrega favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Página en Construcción - Defensa Laboral</title>
+  <title>Defensa Laboral</title>
+  <link rel="icon" type="image/png" href="img/favicon.png">
+
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,13 +16,9 @@
       <p class="subtitle">Gracias por visitarnos. Nuestra página está siendo actualizada.</p>
     </header>
   </div>
-
-  <!-- Footer -->
   <footer class="footer">
     <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p>
   </footer>
-
-  <!-- Script para insertar el año actual -->
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
