Primer commit con cambios de diseño

--- a/index.html
+++ b/index.html
@@ -5,18 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Defensa Laboral</title>
   <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <header class="header">
-        <h1 class="title">Página en Construcción</h1>
-      <p class="subtitle">Gracias por visitarnos. Nuestra página está siendo actualizada.</p>
-      <img src="img/construccion-denfensa-legal-color.svg" alt="Logo Defensa Laboral" class="logo">
-      
-    </header>
-  </div>
+  <section>
+    <div class="portada">
+      <h1>¿Te despidieron sin causa?</h1>
+      <h2>¿No te pagaron lo que te corresponde?</h2>
+    </div>
+    <div>
+      <h3>Defendemos los derechos de los trabajadores</h3>
+      <div>
+        <div>
+          <p>Realizá tus consultas ahora sin cargo.</p>
+          <a href="http://">Asesorate<i class="fa-solid fa-hand-point-up"></i></a>
+        </div>
+      </div>
+    </div>
+  </section>
   <footer class="footer">
     <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p>
   </footer>
