Segunda parte de diseños

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+  <a class="wpp" href="https://wa.me/5491123971108?text=Me%20gustaría%20consultar..." target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i></a>
   <section id="portada-inicial">
     <div class="portada">
       <div>
@@ -36,8 +37,118 @@
         <p>Atención personalizada y gratuita</p>
     </div>
   </section>
-  <footer class="footer">
-    <!-- <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p> -->
+
+  <section id="porque-elegirnos">
+    <div class="elegirnos">
+      <div><h2>¿Por qué elegirnos?</h2></div>
+      <div class="atributos">
+        <h4><i class="fa-solid fa-scale-balanced"></i>Especialistas en Derecho Laboral</h4>
+        <h4><i class="fa-solid fa-clipboard-check"></i>Alta tasa de resolución favorable.</h4>
+        <h4><i class="fa-solid fa-location-dot"></i>Atendemos en todo el país.</h4>
+        <h4><i class="fa-solid fa-bolt"></i>Respuesta inmediata por WhatsApp.</h4>
+      </div>
+    </div>
+  </section>
+
+  <section id="nuestros-servicios">
+    <div class="titulo-nuestros-servicios">
+      <h2>Nuestros Servicios</h2>
+      <h3>Brindamos un acompañamiento integral ante conflictos laborales.<br>Nos ocupamos de:</h3>
+      <div class="servicios">
+        <div>
+          <h5>Despidos con y sin causa</h5>
+          <p>Reclamamos la indemnización máxima legal, revisamos la legalidad del despido y protegemos tus derechos ante situaciones injustas.</p>
+        </div>
+        <div>
+          <h5>Trabajo en negro o mal registrado</h5>
+          <p>Te asistimos si no estás registrado, si tu categoría no corresponde o si tu empleador no realiza aportes correctamente.</p>
+        </div>
+        <div>
+          <h5>Diferencias salariales y horas extras</h5>
+          <p>Revisamos tus recibos, reclamamos pagos omitidos o mal liquidados, y exigimos el reconocimiento de horas extras no abonadas.</p>
+        </div>
+        <div>
+          <h5>Acoso, maltrato y violencia laboral</h5>
+          <p>Actuamos ante situaciones de hostigamiento, discriminación o abuso en el trabajo, resguardando tu integridad y derechos.</p>
+        </div>
+        <div>
+          <h5>Accidentes y enfermedades laborales</h5>
+          <p>Reclamamos ante ART o empresas por accidentes, enfermedades profesionales o secuelas no reconocidas.</p>
+        </div>
+        <div>
+          <h5>Conciliaciones y acuerdos</h5>
+          <p>Negociamos en tu nombre ante el Ministerio de Trabajo y te representamos en audiencias y acuerdos.</p>
+        </div>
+        <div>
+          <h5>Jubilaciones y trámites previsionales</h5>
+          <p>Asesoramos sobre trámites jubilatorios, revisión de aportes, y gestión de beneficios previsionales.</p>
+        </div>
+      </div>
+      <div class="servicios-aclaracion">
+        <h5>¿No encontrás tu situación?</h5>
+        <p>Contactanos! Cada caso es único.</p>
+      </div>
+    </div>
+  </section>
+
+  <section id="trabajamos">
+    <div class="como-trabajamos">
+      <img src="assets/img/abogado-pexels-sora-shimazaki-5668772.jpg" alt="aboragdo revisando actas en computadora">
+    </div>
+    <div class="texto-como-trabajamos">
+      <h2>¿Cómo trabajamos?</h2>
+      <div>
+        <div><span>1</span><h4>Nos contás tu caso</h4></div>
+        <div><span>2</span><h4>Analizamos tu documentación</h4></div>
+        <div><span>3</span><h4>Iniciamos tu reclamo (acuerdo o juicio)</h4></div>
+        <div><span>4</span><h4>Te acompañamos hasta la resolución</h4></div>
+      </div>
+      <div class="casos-comunes">
+        <h3>Casos más comunes que atendemos</h3>
+        <ul>
+          <li>Despido sin causa</li>
+          <li>Trabajo no registrado</li>
+          <li>Sueldos impagos</li>
+          <li>Maltrato laboral</li>
+          <li>Enfermedades del trabajo</li>
+          <li>No reconocimiento de horas extras</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section id="formulario">
+    <div>
+      <h1>Contacto rápido</h1>
+      <h3>Completá el formulario y te respondemos en el día</h3>
+    </div>
+    <div>
+      <form name="contact" method="POST" data-netlify="true">
+        <p>
+          <label><input type="text" name="name" placeholder="Nombre" /></label>
+        </p>
+        <p>
+          <label><input type="text" name="whatsapp" placeholder="Whatsapp" /></label>
+        </p>
+        <p>
+          <label><textarea name="message" placeholder="Mensaje"></textarea></label>
+        </p>
+        <p>
+          Atención por WhatsApp las 24 hs, confidencialidad garantizada.
+          <button type="submit">Enviar<i class="fa-solid fa-arrow-right"></i></button>
+        </p>
+      </form>
+    </div>
+  </section>
+  
+  
+  <footer>
+    <div class="footer">
+      <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p>
+      <div>
+        <p>Hecho con cariño por</p><a href="https://contenidx.com.ar/" target="_blank"><p>Contenidx</p></a>
+      </div>
+    </div>
   </footer>
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
