Se agregan cambios para responsive

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Defensa Laboral</title>
   <link rel="icon" type="image/png" href="img/favicon.png">
-  <link rel="stylesheet" href="style-displays.css">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style-displays.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -128,7 +128,7 @@
           <label><input type="text" name="name" placeholder="Nombre" /></label>
         </p>
         <p>
-          <label><input type="text" name="whatsapp" placeholder="Whatsapp" /></label>
+          <label><input type="text" name="whatsapp" placeholder="Whatsapp" />Ingresa un número de comunicación</label>
         </p>
         <p>
           <label><textarea name="message" placeholder="Mensaje"></textarea></label>
