Se agregan correcciones en footer

--- a/index.html
+++ b/index.html
@@ -144,10 +144,28 @@
   
   <footer>
     <div class="footer">
-      <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p>
-      <div>
-        <p>Hecho con cariño por</p><a href="https://contenidx.com.ar/" target="_blank"><p>Contenidx</p></a>
+      <div class="contenido-footer">
+        <img src="assets/img/Logo-Doble-Linea.svg" alt="Logo de Defensa Laboral">
+        <div class="texto-footer">
+          <h4>Estudio Jurídico Laboral</h4>
+          <h4>Matrícula profesional registrada</h4>
+        </div>
       </div>
+      <div class="contactos-footer">
+        <p>contacto@defensalaboral.com.ar</p>
+        <p>|</p>
+        <p>Buenos Aires – Argentina</p>
+      </div>
+      <div class="redes">
+        <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+        <a href="https://wa.me/5491123971108?text=Me%20gustaría%20consultar..." target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i></a>
+      </div>
+
+      <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p>
+      <!-- <div>
+        <p>Hecho con cariño por</p><a href="https://contenidx.com.ar/" target="_blank"><p>Contenidx</p></a>
+      </div> -->
     </div>
   </footer>
   <script>
