--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3>Defendemos los derechos de los trabajadores</h3>
         <div class="accion">
           <p>Realizá tus consultas ahora sin cargo.</p>
-          <a href="http://">Asesorate<i class="fa-solid fa-hand-point-up"></i></a>
+          <a href="https://wa.me/5491123971108?text=Me%20gustaría%20consultar">Asesorate<i class="fa-solid fa-hand-point-up"></i></a>
         </div>
       </div>
     </div>
@@ -123,7 +123,9 @@
       <h3>Completá el formulario y te respondemos en el día</h3>
     </div>
     <div>
-      <form name="contact" method="POST" data-netlify="true">
+      <form name="contacto" method="POST" data-netlify="true">
+        <input type="hidden" name="form-name" value="contacto" />
+
         <p>
           <label><input type="text" name="name" placeholder="Nombre" /></label>
         </p>
@@ -159,7 +161,7 @@
       <div class="redes">
         <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
         <a href="#" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
-        <a href="https://wa.me/5491123971108?text=Me%20gustaría%20consultar..." target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://wa.me/5491123971108?text=Me%20gustaría%20consultar" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
 
       <p>&copy; <span id="year"></span> Defensa Laboral. Todos los derechos reservados.</p>
