Correccion de tipeo

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
       </div>
       <div class="contactos-footer">
-        <p>contacto@defensalaboral.com.ar</p>
+        <p>info@defensalaboral.com.ar</p>
         <p>|</p>
         <p>Buenos Aires – Argentina</p>
       </div>
