--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
       <h3>Completá el formulario y te respondemos en el día</h3>
     </div>
     <div>
-      <form name="contacto" method="POST" data-netlify="true" netlify>
+      <form id="contactForm">
+      <!-- <form name="contacto" method="POST" data-netlify="true" netlify> -->
         <input type="hidden" name="form-name" value="contacto" />
 
         <p>
